[package]
name = "cba_with_grub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
# alloc-cortex-m = "0.4.4"

embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "stm32h743zi", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "defmt", "integrated-timers", "executor-thread"] }
embassy-time = { version = "0.1.3", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly", "tcp", "udp", "medium-ethernet", "proto-ipv4"] }
embedded-io-async = { version = "0.5.0" }

panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
defmt-test = "0.3"

embedded-nal-async = { version = "0.5.0" }
rand_core = "0.6.4"
static_cell = { version = "1.2", features = ["nightly"]}
heapless = { version = "0.7.16", features = ["defmt"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[[bin]]
name = "cba_with_grub"
harness = false
